Change data file used

--- a/eq_events_view.ipynb
+++ b/eq_events_view.ipynb
@@ -41,10 +41,7 @@
     "# geo_df.explore()"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "is_executing": true
-    }
+    "collapsed": false
    }
   }
  ],
