--- a/Earthquakes_vpx-dash.ipynb
+++ b/Earthquakes_vpx-dash.ipynb
@@ -12,7 +12,7 @@
     "import pandas as pd\n",
     "import geopandas as gpd\n",
     "import plotly.express as px\n",
-    "from dash import html, dcc, Dash\n"
+    "from dash import html, dcc, Dash"
    ]
   },
   {
@@ -33,8 +33,17 @@
    "outputs": [],
    "source": [
     "# geo_df = gpd.read_file('2022-07-19-SC-Earthquake.geojson')\n",
-    "geo_df = gpd.read_file('./data/2022-09-03-SC-Earthquake.geojson')"
+    "geo_df = gpd.read_file(r'./data/20221218_SC_Earthquake.geojson')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
@@ -192,13 +201,10 @@
     "              style={'background':'#00FC87','padding-bottom':'2px','padding-left':'2px','height':'50vh'})\n",
     "])\n",
     "if __name__ == '__main__':\n",
-    "    app.run(debug=True, use_reloader=False, port = 8050)"
+    "    app.run(debug=True, use_reloader=False, port=8050)"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "is_executing": true
-    }
+    "collapsed": false
    }
   }
  ],
