Addition of graph plots to Earthquakes_v1.py and uploading of test programs

--- a/Earthquakes_vpx-dash.ipynb
+++ b/Earthquakes_vpx-dash.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "source": [
+    "#### Plotly Dash Version of Earthquake"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "ac2c40b1-34bc-4de8-8a58-f47044d31c45",
@@ -39,11 +48,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ae3f94c4",
+   "metadata": {},
    "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false
-   }
+   "source": []
   },
   {
    "cell_type": "code",
@@ -149,6 +157,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b58b57d0",
+   "metadata": {
+    "pycharm": {
+     "is_executing": true
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# read in mapbox access token\n",
@@ -202,10 +217,7 @@
     "])\n",
     "if __name__ == '__main__':\n",
     "    app.run(debug=True, use_reloader=False, port=8050)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   }
  ],
  "metadata": {
