--- a/Earthquakes_vpx.ipynb
+++ b/Earthquakes_vpx.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "source": [
+    "#### Plotly Express Version Of Earthquake Map - Notebook"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "7e10f9e3-aab6-43a8-a6fe-af89f57d6faf",
