--- a/dyfi_responses.ipynb
+++ b/dyfi_responses.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "source": [
+    "### Display DYFI Info. From csv File"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -8,10 +17,9 @@
    },
    "outputs": [],
    "source": [
-    "import geopandas as gpd\n",
-    "import json\n",
-    "import plotly.express as px\n",
-    "%matplotlib inline"
+    "import pandas as pd\n",
+    "from dash import dash, html, Input, Output\n",
+    "import dash_bootstrap_components as dbc"
    ]
   },
   {
@@ -19,7 +27,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "px.set_mapbox_access_token(open(\".mapbox_token\").read())"
+    "app = dash.Dash(__name__, external_stylesheets=[dbc.themes.BOOTSTRAP])"
    ],
    "metadata": {
     "collapsed": false
@@ -30,7 +38,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "utm_cdi_geo_df = gpd.read_file(r\"./data/utm_test.geojson\")"
+    "dyfi_responses_df = pd.read_csv(r\"./data/cdi_zip.csv\")"
    ],
    "metadata": {
     "collapsed": false
@@ -41,7 +49,10 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "utm_cdi_geo_df"
+    "app.layout = html.Div([\n",
+    "    html.Button('Table', id='table-but', n_clicks=0),\n",
+    "    html.Div(id='container-button-basic')\n",
+    "])"
    ],
    "metadata": {
     "collapsed": false
@@ -51,7 +62,15 @@
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
-   "source": [],
+   "source": [
+    "@app.callback(\n",
+    "    Output('container-button-basic', 'children'),\n",
+    "    Input('table-but', 'n_clicks'))\n",
+    "def search_fi(n_clicks):\n",
+    "    if n_clicks > 0:\n",
+    "        table = dbc.Table.from_dataframe(dyfi_responses_df, striped=True, bordered=True, hover=True)\n",
+    "        return table"
+   ],
    "metadata": {
     "collapsed": false
    }
@@ -61,17 +80,8 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "fig = px.choropleth_mapbox(utm_cdi_geo_df,\n",
-    "                           geojson=utm_cdi_geo_df.geometry,\n",
-    "                           locations=utm_cdi_geo_df.name,\n",
-    "                           color=\"cdi\",\n",
-    "                           range_color=[0.0, 10.0],\n",
-    "                           center={\"lat\": 34.0007, \"lon\": -81.0348},\n",
-    "                           mapbox_style=\"streets\",\n",
-    "                           zoom=7.5)\n",
-    "                           #hover_data={'ZCTA5CE10': False},)\n",
-    "\n",
-    "fig.show()"
+    "if __name__ == '__main__':\n",
+    "    app.run_server(debug=False, port=8050)"
    ],
    "metadata": {
     "collapsed": false
