Fix for eq event felt responses equal zero

--- a/Earthquakes.ipynb
+++ b/Earthquakes.ipynb
@@ -30,7 +30,7 @@
    "outputs": [],
    "source": [
     "# with open(\"2022-06-26-SC-Earthquake.json\", \"r\", encoding=\"utf-8\") as f:\n",
-    "with open(\"./data/2022-09-03-SC-Earthquake.geojson\", \"r\", encoding=\"utf-8\") as f:\n",
+    "with open(\"./data/SC_Earthquake.geojson\", \"r\", encoding=\"utf-8\") as f:\n",
     "    SC_eq_list = json.load(f)"
    ]
   },
@@ -123,7 +123,8 @@
     "# The eq_df['Felt'] series had/may have null values; The following expression finds those rows\n",
     "# with a null value in the 'Felt' column and assigns it to 0 and casts it to an integer dtype.\n",
     "\n",
-    "eq_df['Felt'] = eq_df['Felt'].fillna(0).astype('int')"
+    "eq_df['Felt'] = eq_df['Felt'].fillna(0).astype('int')\n",
+    "eq_df['Location'] = eq_df['Location'].fillna('No Location').astype('str')"
    ]
   },
   {
