Data file name change

--- a/Earthquakes_vpx-dash.ipynb
+++ b/Earthquakes_vpx-dash.ipynb
@@ -42,7 +42,7 @@
    "outputs": [],
    "source": [
     "# geo_df = gpd.read_file('2022-07-19-SC-Earthquake.geojson')\n",
-    "geo_df = gpd.read_file(r'./data/20221218_SC_Earthquake.geojson')"
+    "geo_df = gpd.read_file(r'./data/SC_Earthquake.geojson')"
    ]
   },
   {
