--- a/GeoPandas1.ipynb
+++ b/GeoPandas1.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "source": [
+    "## Working with Geopandas and Matplotlib Functions"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "09ccee5f-b71d-4693-bc3b-91816e9a0a7f",
