--- a/Earthquakes_vpx.ipynb
+++ b/Earthquakes_vpx.ipynb
@@ -42,7 +42,7 @@
    "source": [
     "# geo_df = gpd.read_file('2022-07-19-SC-Earthquake.geojson')\n",
     "# geo_df = gpd.read_file('./data/2022-09-03-SC-Earthquake.geojson')\n",
-    "geo_df = gpd.read_file(r'./data/20221218_SC_Earthquake.geojson')"
+    "geo_df = gpd.read_file(r'./data/SC_Earthquake.geojson')"
    ]
   },
   {
