--- a/eq_events_view.ipynb
+++ b/eq_events_view.ipynb
@@ -19,6 +19,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
+    "# Need to add dbc.themes.BOOTSTRAP so styling of bootstrap components will work\n",
     "app = dash.Dash(__name__)"
    ],
    "metadata": {
@@ -30,7 +31,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "geo_df = gpd.read_file(r'./data/20221218_SC_Earthquake.geojson')"
+    "geo_df = gpd.read_file(r'./data/SC_Earthquake.geojson')"
    ],
    "metadata": {
     "collapsed": false
@@ -133,15 +134,6 @@
     "if __name__ == '__main__':\n",
     "    app.run_server(debug=False, port=8050)"
    ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
    "metadata": {
     "collapsed": false
    }
