Update Markdown text

--- a/intensity_dist_plot2.ipynb
+++ b/intensity_dist_plot2.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "source": [
+    "## Intensicy vs. Distance Plot of M3.8 1 KM NE of West Seneca, NY Earthquake Using Matplotlib Subplots & Loop"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
