Update Markdown text

--- a/zip_choro_go.ipynb
+++ b/zip_choro_go.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "source": [
+    "## Plot/Prototype of Zipcode Choropleth Mapbox Using Plotly Graph Objects"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
