--- a/utm_cdi_plot.ipynb
+++ b/utm_cdi_plot.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "source": [
+    "## Test CDI Plot; First Using .explore() Method; Second Using Plotly Express choropleth_mapbox"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -9,7 +18,6 @@
    "outputs": [],
    "source": [
     "import geopandas as gpd\n",
-    "import json\n",
     "import plotly.express as px\n",
     "%matplotlib inline"
    ]
@@ -51,7 +59,18 @@
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
-   "source": [],
+   "source": [
+    "utm_cdi_geo_df.explore()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "#### This plot does not work. the geojson needs to be set to the geojson file, not the dataframe."
+   ],
    "metadata": {
     "collapsed": false
    }
