Add Markdown Cells

--- a/utm_cdi_plot.ipynb
+++ b/utm_cdi_plot.ipynb
@@ -13,7 +13,8 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "is_executing": true
    },
    "outputs": [],
    "source": [
